--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "dependencies" : {
     "typeahead.js" : "~0.10.5",
-    "jquery" : "~2"
+    "jquery" : "~2",
+    "handlebars": "2.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
