--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-compress": "~0.5.2",
     "grunt-contrib-sass": "~0.7.x",
-    "grunt-autoprefixer": "0.7.x"
+    "grunt-autoprefixer": "0.7.x",
+    "jasmine" : "~2.2"
   },
   "scripts": {
     "test" : "grunt jasmine",
