--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-cli": "~0.1",
     "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-uglify": "~0.4.x",
     "grunt-contrib-jasmine": "~0.6.x",
