--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "grunt-contrib-jasmine": "~0.6.x",
     "grunt-jslint": "~1.1",
     "jasmine" : "~2.2",
-    "jasmine-ajax" : "~2"
+    "jasmine-ajax" : "~2",
+    "jasmine-jquery" : "~2"
   },
   "scripts": {
     "test" : "grunt test",
