--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jasmine" : "~2.2",
     "jasmine-ajax" : "~2",
     "jasmine-jquery" : "~2",
-    "jasmine-expect" : "~1"
+    "jasmine-expect" : "~1",
+    "sinon" : "~1.12"
   },
   "scripts": {
     "test" : "grunt test",
