--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "CapitainsSparrow",
   "description": " Capitains-Sparrow provide a suite of CTS abstraction in JS but also jQuery plugins ",
   "version": "0.0.1",
-  "dependencies" : {
-    "typeahead.js" : "~0.10.5",
-    "jquery" : "~2",
+  "dependencies": {
+    "typeahead.js": "~0.10.5",
+    "jquery": "~2",
     "handlebars": "2.0.0"
   },
   "devDependencies": {
@@ -13,18 +13,26 @@
     "grunt-contrib-concat": "~0.1.2",
     "grunt-contrib-uglify": "~0.4.x",
     "grunt-contrib-jasmine": "~0.6.x",
+    "grunt-karma": "~0.10",
     "grunt-jslint": "~1.1",
-    "jasmine" : "~2.2",
-    "jasmine-ajax" : "~2",
-    "jasmine-jquery" : "~2",
-    "jasmine-expect" : "~1",
-    "sinon" : "~1.12"
+
+    "jasmine": "~2.2",
+    "jasmine-ajax": "~2",
+    "jasmine-jquery": "~2",
+    "jasmine-expect": "~1",
+    "phantomjs": "~1.9",
+
+    "karma": "~0.12.0",
+    "karma-jasmine": "~0.2.0",
+    "karma-jasmine-jquery": "~0.1",
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-firefox-launcher": "~0.1.4"
   },
   "scripts": {
-    "test" : "grunt test",
-    "build" : "grunt build"
+    "test": "grunt test",
+    "build": "grunt build"
   },
-  "repositories": [
+  "repository": [
     {
       "type": "git",
       "url": "https://github.com/PerseusDL/Capitains-Sparrow"
