--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "karma-jasmine": "~0.2.0",
     "karma-jasmine-jquery": "~0.1",
     "karma-phantomjs-launcher": "~0.1.4",
-    "karma-firefox-launcher": "~0.1.4"
+    "karma-firefox-launcher": "~0.1.4",
+    "karma-chrome-launcher": "~0.1"
   },
   "scripts": {
     "test": "grunt test",
