--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "grunt-contrib-jasmine": "~0.6.x",
     "grunt-karma": "~0.10",
     "grunt-jslint": "~1.1",
+    "grunt-jsdoc" : "~0.5",
+    "grunt-markdown" : "~0.7",
+    "grunt-text-replace" : "~0.4",
 
     "jasmine": "~2.2",
     "jasmine-ajax": "~2",
