Full process for publication of GH Pages

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-jsdoc" : "~0.5",
     "grunt-markdown" : "~0.7",
     "grunt-text-replace" : "~0.4",
+    "grunt-gh-pages" : "~0.10",
 
     "jasmine": "~2.2",
     "jasmine-ajax": "~2",
