No caps for name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Capitains-Sparrow",
+  "name": "capitains-sparrow",
   "description": "Javascript abstractions and plugins for the CITE/CTS specification",
   "version": "1.0.0",
   "keywords": [
