--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,10 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "spec",
+    "examples",
+    "doc",
+    "doc_html"
   ]
 }
