--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "capitains-sparrow",
   "version": "1.0.3",
-  "homepage": "https://github.com/PerseusDL/Capitains-Sparrow",
+  "homepage": "https://github.com/Capitains/Sparrow",
   "authors": [
     "Thibault Clérice <leponteineptique@gmail.com>"
   ],
