--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "API",
     "Capitains"
   ],
-  "dependencies": {
-    "typeahead.js": "~0.10.5",
-    "jquery": "~2",
-    "handlebars": "2.0.0"
-  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1",
@@ -21,24 +16,16 @@
     "grunt-contrib-uglify": "~0.4.x",
     "grunt-contrib-jasmine": "~0.6.x",
     "grunt-contrib-clean": "~0.6",
-    "grunt-karma": "~0.10",
+
     "grunt-jslint": "~1.1",
     "grunt-jsdoc": "~0.5",
-    "grunt-markdown": "~0.7",
-    "grunt-text-replace": "~0.4",
     "grunt-gh-pages": "~0.10",
     "grunt-release": "0.11.0",
     "jasmine": "~2.2",
     "jasmine-ajax": "~2",
+    "jquery": "~2",
     "jasmine-jquery": "~2",
-    "jasmine-expect": "~1",
-    "phantomjs": "~1.9",
-    "karma": "~0.12.0",
-    "karma-jasmine": "~0.2.0",
-    "karma-jasmine-jquery": "~0.1",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "karma-firefox-launcher": "~0.1.4",
-    "karma-chrome-launcher": "~0.1"
+    "jasmine-expect": "~1"
   },
   "scripts": {
     "test": "grunt test",
@@ -71,7 +58,7 @@
   "bugs": {
     "url": "https://github.com/Capitains/Sparrow/issues"
   },
-  "repositories": 
+  "repository": 
     {
       "type": "git",
       "url": "https://github.com/Capitains/Sparrow.git"
