--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "capitains-sparrow",
   "description": "Javascript abstractions and plugins for the CITE/CTS specification",
-  "version": "1.1.0",
+  "version": null,
   "keywords": [
     "CITE",
     "CTS",
