--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "capitains-sparrow",
-  "version": "1.1.0",
+  "version": null,
   "homepage": "https://github.com/Capitains/Sparrow",
   "authors": [
     "Thibault Clérice <leponteineptique@gmail.com>"
