--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "capitains-sparrow",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "homepage": "https://github.com/Capitains/Sparrow",
   "authors": [
-    "Thibault Clérice <leponteineptique@gmail.com>"
+    "Thibault Clérice <leponteineptique@gmail.com>",
+    "Bridget Almas <balmas@gmail.com>"
   ],
   "description": "CTS API abstractions and jQuery plugin",
   "main": "dist/cts.min.js",
