--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "capitains-sparrow",
-  "version": "1.2.1",
+  "version": "1.2.3",
   "homepage": "https://github.com/Capitains/Sparrow",
   "authors": [
-    "Thibault Clérice <leponteineptique@gmail.com>",
+    "Thibault Clerice <leponteineptique@gmail.com>",
     "Bridget Almas <balmas@gmail.com>"
   ],
   "description": "CTS API abstractions and jQuery plugin",
