one more unicode fix

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "contributors": [
     {
-      "name": "Thibault Clérice",
+      "name": "Thibault Clerice",
       "email": "",
       "web": "http://github.com/PonteIneptique"
     },
